--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+video, img {
+ 
+  margin: 10px;
+}
+
