--- a/src/App.css
+++ b/src/App.css
@@ -2,54 +2,37 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-
 .container {
   display: flex;
   justify-content: center;
 }
-
-video, img {
- 
-  margin: 10px;
+video{
+  margin-bottom: 10px;
+}
+img {
+   margin-right: 300px;
+   margin-bottom: 10px;
 }
 
-.captured-image {
-  display: block;
-  margin-left: 70px;
-  margin-right: auto;
+a{
+  text-decoration: none;
+  color : black
 }
+
+.save{
+  /* margin-left: 10px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ margin: 10px;
+}
+
+/* .btn-style{
+  margin-top: 20px;
+} */
+
+.croppedbtn{
+  display: flex;
+  
+}
+
