--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ img {
 
 a{
   text-decoration: none;
-  color : black
+  color :white
 }
 
 .save{
@@ -25,6 +25,8 @@ a{
   align-items: center;
   justify-content: center;
  margin: 10px;
+ color:white;
+ 
 }
 
 /* .btn-style{
@@ -34,10 +36,34 @@ a{
  .croppedbtn{
  
   margin-left: 10px;
-  
-  
-}
-#color{
-  background-color: aqua;
+ text-decoration: white;
+   
 }
 
+
+button {
+  background-color:rgb(3, 28, 26);
+  color:white;
+  border-radius: 20px;
+  height: 30px;
+  box-shadow:50px 30px ;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  font-style:normal;
+  width: 200px;
+  font-size: large;
+   
+
+}
+
+button:hover{
+  background-color:green;
+  color:white;
+  
+  height: 30px;
+  box-shadow:50px 30px ;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+
+}
